Change Nav and Fixed Register Form

--- a/WebApp/Templates/Base_UI_WithLogIn.html
+++ b/WebApp/Templates/Base_UI_WithLogIn.html
@@ -5,9 +5,6 @@
     <title>Trang chủ</title>
 </head>
 <body>
-    {% include 'NavigationBar/nav.html' %}
-    <br>
-    <br>
-    <h1>Yeah!!</h1>
+    <h1>Hello</h1>
 </body>
 </html>
