--- a/webapp/templates/NavigationBar/LogIn_Page.html
+++ b/webapp/templates/NavigationBar/LogIn_Page.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>LogIn</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Log In!!!</h1>
+    {% include 'NavigationBar/nav.html' %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 mx-auto">
+
+                <div id="first">
+                    <div class="myform form">
+                        <div class="logo mb-3">
+                            <div class="col-md-12 text-center">
+                                <h1>Login</h1>
+                            </div>
+                        </div>
+
+                        <form role="form" action="{% url 'Page:page_login' %}" method="POST" name="login">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <label for="id_username">Account Name</label>
+                                <input type="text" name="username" class="form-control" id="id_username"
+                                    aria-describedby="emailHelp" placeholder="Enter Account Name">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="id_password">Password</label>
+                                <input type="password" name="password" id="id_password" class="form-control"
+                                    aria-describedby="emailHelp" placeholder="Enter Password">
+                            </div>
+
+                            <div class="col-md-12 text-center ">
+                                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Login</button>
+                            </div>
+
+                            <div class="form-group">
+                                <p class="text-center">Don't have account? <a href="../register_user/#" id="signup">Sign
+                                        up here</a></p>
+                            </div>
+                        </form>
+                    </div>
+                    
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
 </body>
+
 </html>
