--- a/webapp/templates/NavigationBar/Register_Page.html
+++ b/webapp/templates/NavigationBar/Register_Page.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Register</h1>
+    <center>
+        <form action="." method="POST">
+            {% csrf_token %}
+<!--            Cần chỉnh cái này theo css nhé Hải-->
+            {{form.as_p}}
+            <input type="submit" value="Đăng ký"/>
+        </form>
+    </center>
 </body>
 </html>
