update index Page

--- a/webapp/templates/Base_UI_WithoutLogIn.html
+++ b/webapp/templates/Base_UI_WithoutLogIn.html
@@ -8,6 +8,7 @@
     {% include 'NavigationBar/nav.html' %}
     <br>
     <br>
-    <h1>Yeah!!</h1>
+    <br>
+    {% include 'ViewProduct.html' %}
 </body>
 </html>
