--- a/webapp/templates/NavigationBar/nav.html
+++ b/webapp/templates/NavigationBar/nav.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>Navigation Bar</title>
     <meta charset="UTF-8">
@@ -13,7 +12,6 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 <body>
     <div class="w3-top">
         <div class="w3-bar w3-black w3-card">
@@ -33,5 +31,4 @@
         </div>
     </div>
 </body>
-
 </html>
