--- a/webapp/templates/NavigationBar/LogIn_Page.html
+++ b/webapp/templates/NavigationBar/LogIn_Page.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>LogIn</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -12,26 +16,37 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link href="/static/style_login.css" rel="stylesheet" /> -->
+
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+        <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link href="/static/style_login.css" rel="stylesheet" />
 </head>
 
 <body>
     {% include 'NavigationBar/nav.html' %}
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-5 mx-auto">
+                <div class="myform form">
 
-                <div id="first">
-                    <div class="myform form">
-                        <div class="logo mb-3">
+                        <div class="logo mb-3 title">
                             <div class="col-md-12 text-center">
-                                <h1>Login</h1>
+                                <h2>Login Now</h2>
                             </div>
                         </div>
 
                         <form role="form" action="{% url 'Page:page_login' %}" method="POST" name="login">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="id_username">Account Name</label>
+                                <div class="information">
+                                    <label for="id_username">Account Name</label>
+                                </div>
                                 <input type="text" name="username" class="form-control" id="id_username"
                                     aria-describedby="emailHelp" placeholder="Enter Account Name">
                             </div>
@@ -45,7 +60,7 @@
                             <div class="col-md-12 text-center ">
                                 <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Login</button>
                             </div>
-
+                        
                             <div class="form-group">
                                 <p class="text-center">Don't have account? <a href="../register_user/#" id="signup">Sign
                                         up here</a></p>
@@ -56,9 +71,55 @@
                     {% if error_message %}
                         <p><strong>{{ error_message }}</strong></p>
                     {% endif %}
+            </div>
+        </div> -->
+    <center>
+        <form role="form" action="{% url 'Page:page_login' %}" method="POST" name="login">
+            {% csrf_token %}
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 mx-auto">        
+                        <div class="logo mb-3">
+                            <div class="col-md-12 text-center title">
+                                <p>SIGN IN</p>
+                            </div>
+                        </div>
+
+                        <div class="form-group form-control">
+                            <div class = "information">
+                                <label for="id_username">Account Name</label>
+                            </div>
+                            <input type="text" name="username" class="form-control" id="id_username"
+                                    aria-describedby="emailHelp" placeholder="Enter Account Name">
+                        </div>
+
+                        <div class="form-group form-control">
+                            <div class = "information">
+                                <label for="id_password">Password</label>
+                            </div>
+                            <input type="password" name="password" id="id_password" class="form-control"
+                                    aria-describedby="emailHelp" placeholder="Enter Password">
+                        </div>
+                            
+                        <div class="col-md-12 text-center start-button">
+                            <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Start explore now !</button>
+                        </div>
+
+                        <div class="col-md-12 form">
+                            <p class="text-center" id="question">Don't have account? <a href="../register_user/#" id="signup">Sign
+                                up here</a></p>
+                        </div>
+
+                        {% if error_message %}
+                        <div class="col-md-12 text-center warning">
+                            <p><strong>{{ error_message }}</strong></p>
+                        </div>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
+    </center>
 </body>
 
 </html>
