--- a/webapp/templates/NavigationBar/LogIn_Page.html
+++ b/webapp/templates/NavigationBar/LogIn_Page.html
@@ -3,12 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title>LogIn</title>
-
-    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -16,67 +12,53 @@
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link href="/static/style_login.css" rel="stylesheet" /> -->
-
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
-        <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link href="/static/style_login.css" rel="stylesheet" />
 </head>
 
 <body>
     {% include 'NavigationBar/nav.html' %}
-    <center>
-        <form role="form" action="{% url 'Page:page_login' %}" method="POST" name="login">
-            {% csrf_token %}
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 mx-auto">        
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 mx-auto">
+
+                <div id="first">
+                    <div class="myform form">
                         <div class="logo mb-3">
-                            <div class="col-md-12 text-center title">
-                                <p>SIGN IN</p>
+                            <div class="col-md-12 text-center">
+                                <h1>Login</h1>
                             </div>
                         </div>
 
-                        <div class="form-group form-control">
-                            <div class = "information">
+                        <form role="form" action="{% url 'Page:page_login' %}" method="POST" name="login">
+                            {% csrf_token %}
+                            <div class="form-group">
                                 <label for="id_username">Account Name</label>
-                            </div>
-                            <input type="text" name="username" class="form-control" id="id_username"
+                                <input type="text" name="username" class="form-control" id="id_username"
                                     aria-describedby="emailHelp" placeholder="Enter Account Name">
-                        </div>
-
-                        <div class="form-group form-control">
-                            <div class = "information">
-                                <label for="id_password">Password</label>
                             </div>
-                            <input type="password" name="password" id="id_password" class="form-control"
+
+                            <div class="form-group">
+                                <label for="id_password">Password</label>
+                                <input type="password" name="password" id="id_password" class="form-control"
                                     aria-describedby="emailHelp" placeholder="Enter Password">
-                        </div>
-                            
-                        <div class="col-md-12 text-center start-button">
-                            <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Start explore now !</button>
-                        </div>
+                            </div>
 
-                        <div class="col-md-12 form">
-                            <p class="text-center" id="question">Don't have account? <a href="../register_user/#" id="signup">Sign
-                                up here</a></p>
-                        </div>
+                            <div class="col-md-12 text-center ">
+                                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Login</button>
+                            </div>
 
-                        {% if error_message %}
-                        <div class="col-md-12 text-center warning">
-                            <p><strong>{{ error_message }}</strong></p>
-                        </div>
-                        {% endif %}
+                            <div class="form-group">
+                                <p class="text-center">Don't have account? <a href="../register_user/#" id="signup">Sign
+                                        up here</a></p>
+                            </div>
+                        </form>
                     </div>
+                    
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
                 </div>
             </div>
-        </form>
-    </center>
+        </div>
 </body>
 
 </html>
