--- a/webapp/templates/Base_UI_WithoutLogIn.html
+++ b/webapp/templates/Base_UI_WithoutLogIn.html
@@ -6,9 +6,23 @@
 </head>
 <body>
     {% include 'NavigationBar/nav.html' %}
-    <br>
-    <br>
-    <br>
-    {% include 'ViewProduct.html' %}
+    <div class="w3-container w3-center w3-padding-48 w3-white">
+        <h1 class="w3-xxxlarge"><b>HOBO HUNTERS</b></h1>
+        <h6><span class="w3-tag">HOBO HUNTERS</span>&nbsp Xin Kính Chào Quý Khách</h6>
+      </div>
+    
+    <div class="w3-display-container w3-wide" id="home">
+        <img class="w3-image" src="./media/other_image/colorful_symbol.jpg" alt="Hobo Symbol" width="1600" height="1000">
+        <div class="w3-display-left w3-padding-large">
+          <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>MUA</b></h1>
+          <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>ĐI</b></h1>
+          <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>CHỜ</b></h1>
+          <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>CHI!</b></h1>
+        </div>
+    </div>
+    <div class="w3-content w3-padding" style="max-width:1564px">
+        {% include 'ViewProduct.html' %}
+    </div>
+    
 </body>
 </html>
