change user view
change user view after registration

--- a/WebApp/Templates/User_View.html
+++ b/WebApp/Templates/User_View.html
@@ -3,38 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        #product_name {
+        height: 50px;
+    }
+    </style>
+    
 </head>
 <body>
-    <div>
+    <div class="w3-container" id="items">
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Mặt hàng</h3>
+      </div>
+    <div class="w3-row-padding" id = "all_products">
         {% for obj in sanpham %}
-        <div>
-            <div>
+        <div  class="w3-col w3-card l4 m6 w3-margin-bottom w3-hover-shadow w3-center" id ="product">
+            <div  class = "w3-container">
                 <a href="">
-                    <img src="{{ obj.img.url }}">
+                    <img src="{{ obj.img.url }}"  class="w3-hover-opacity">
                 </a>
-                <div>
-                    <b>{{ obj.title }} <br>
-                        Giá: {{ obj.price|floatformat:'-1' }} VNĐ</b>
-                    <hr>
-                    <p><a href="{% url 'Page:page_ViewDetail' obj.id %}" role="button">View Detail</a></p>
-                    <span>
-                        {% if cart %}
-                            {% for item in cart %}
-                            {% if forloop.first %}
-                            <a title="Add Cart" href="{% url 'Page:page_AddCart' obj.id user.id %}">
-                                <span></span>Add Cart
-                            </a>
+                <div class="w3-container w3-white w3-row">
+                    <div class = "w3-center" id = "product_name">{{ obj.title }}</div>
+                    <div class = "w3-center">Giá: {{ obj.price|floatformat:'-1' }} VNĐ</div>
+                    <div class = "w3-row-padding">
+                        <div class = "w3-col w3-card w3-margin-top w3-padding-16 w3-half w3-hover-shadow">
+                            <a href="{% url 'Page:page_ViewDetail' obj.id %}" role="button" style="text-decoration: none;">View Detail</a>
+                        </div>
+                        <div class = "w3-col w3-card w3-margin-top w3-padding-16 w3-half w3-hover-shadow">
+                            {% if cart %}
+                                {% for item in cart %}
+                                {% if forloop.first %}
+                                <a title="Add Cart" href="{% url 'Page:page_AddCart' obj.id user.id %}" style="text-decoration: none;">
+                                    Add Cart
+                                </a>
+                                {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                <a title="Add Cart" href="{% url 'Page:page_AddCartEmpty' obj.id user.id %}" style="text-decoration: none;">
+                                    Add Cart
+                                </a>
                             {% endif %}
-                            {% endfor %}
-                        {% else %}
-                            <a title="Add Cart" href="{% url 'Page:page_AddCartEmpty' obj.id user.id %}">
-                                <span></span>Add Cart
-                            </a>
-                        {% endif %}
-                    </span>
-                    <a href="" role="button">
-                        <span></span>
-                    </a>
+                        </div>
+                    </div>
+                    <p></p>
+        
                 </div>
             </div>
         </div>
