--- a/WebApp/Templates/Form/form_DeleteForm.html
+++ b/WebApp/Templates/Form/form_DeleteForm.html
@@ -2,28 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <span onclick="document.getElementById('id{{item.id}}{{item.id}}{{item.id}}').style.display='none'" class="">&times;</span>
-    <h4 align="center" style="color: #000099"><strong>Thông báo từ sản phẩm {{item.product.title}}</strong></h4>
 </head>
 <body>
-    <div class="container">
+    <header class="w3-container w3-light-blue">
+        <span onclick="document.getElementById('id{{item.id}}').style.display='none'"
+          class="w3-button w3-display-topright">&times;</span>
+        <h4 align="center" style="color: #000099"><strong>Thông báo từ sản phẩm {{item.product.title}}</strong></h4>
+    </header>
+
+    <div class="w3-container">
         <br>
         <div align="center">
             <hr>
                 <form action="" method="post" action="" enctype="multipart/form-data">
                     <div>
-                        <p><span class="glyphicon glyphicon-alert"></span> Bạn có chắc là hủy mua sản phẩm "<b>{{item.product.title}}</b>" với số lượng <b>"{{item.num}}"</b></p>
-                        <p>Đồng ý xin vui lòng nhấn <b>"Agree"</b> | Không đồng ý nhấn <b>"Ignore"</b></p>
+                        <div>
+                            <p><span class="fa fa-warning"></span> Bạn có chắc là hủy mua sản phẩm "<b>{{item.product.title}}</b>" với số lượng <b>"{{item.num}}"</b></p>
+                            <p align="center">Đồng ý xin vui lòng nhấn <b>"Agree"</b> | Không đồng ý nhấn <b>"Ignore"</b></p>
+                        </div>
                     </div>
                 </form>
             <hr>
         </div>
         <div align="right">
-        <a href="{% url 'Page:page_Buy' item.id %}"><button type="button" class="btn btn-success  btn-xs">Agree</button></a>
-        <span onclick="document.getElementById('id{{item.id}}{{item.id}}{{item.id}}').style.display='none'">
-            <button type="button" class="">Ignore</button>
-        </span>
+            <a href="{% url 'Page:page_DeleteCart' item.id item.product.id %}"
+               class="w3-button w3-blue w3-tiny w3-padding-small w3-round-xlarge" style="text-decoration:none"><b style="font-size:12px">Accept</b>
+            </a>
+            <span onclick="document.getElementById('id{{item.id}}').style.display='none'" class="w3-button w3-blue w3-tiny w3-padding-small w3-round-xlarge">
+                <b style="font-size:12px">Ignore</b>
+            </span>
         </div>
         <br>
     </div>
